# jeta

./: .codecov.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  contributing.md  environment.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: changelog.yml  codecov.yml  lint.yml  test.yml
jeta/: anil.py  base.py  cnp.py  logger.py  loss.py  maml.py  meta_sgd.py  metrics.py  models.py  opti_trainer.py
jeta/data/: base_dataset.py  dataset.py  task_dataset.py
src/jeta/: maml.py
src/max/: loss.py  metrics.py
tests/: test_maml.py  test_opti.py
