[metadata]
name = "max"
version = 0.1.0
author = "Society for Artificial Intelligence and Deep Learning"
author_email = "vedantshah2012@gmail.com"
description = "A JAX based meta-learning library"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/SforAiDl/max"
project_urls =
    [
        {
            "name": "SforAiDl",
            "url": "https://github.com/SforAiDl"
        }
    ]
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
